--- a/hardhat2/package.json
+++ b/hardhat2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hardhat",
+  "name": "hardhat2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,12 +11,10 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "hardhat": "^2.17.1"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.3",
-    "dotenv": "^16.3.1",
-    "ethers": "^6.7.0"
+    "dotenv": "^16.3.1"
   }
 }
