--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,17 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.4.9",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.13",
-    "next": "13.4.13",
-    "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "@ethersproject/providers": "^5.7.2",
+    "@next/font": "13.4.6",
+    "@types/node": "^20.3.1",
+    "@types/react": "18.2.12",
+    "@types/react-dom": "18.2.5",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "axios": "^1.4.0",
+    "canvas": "^2.11.2",
+    "dotenv": "^16.3.1",
+    "ethers": "^6.6.0",
+    "form-data": "^4.0.0",
+    "next": "^13.4.6",
+    "qrcode": "^1.5.3",
+    "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
+    "react-dom": "^18.2.0",
+    "react-hooks-global-state": "^2.1.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.9.0",
+    "react-loader-spinner": "^5.3.4",
+    "typescript": "5.1.3",
+    "walletlink": "^2.5.0",
+    "web3": "^4.0.1",
+    "web3-utils": "^4.0.1",
+    "web3modal": "^1.9.12"
+  },
+  "devDependencies": {
+    "@types/qrcode": "^1.5.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
