--- a/my-app/package.json
+++ b/my-app/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@types/qrcode": "^1.5.0",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.47.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
   }
